test/files/neg/bug649.check
bug649.scala:3: error: illegal cyclic reference involving method foo
  def foo[A] = foo[A]
      ^
one error found
